1999-01-31  Yo Ric Dude  <ericmit@ix.netcom.com>

	* LICENSE, COPYING.LIB: Make some effort at license term disclosure.

1999-01-30  Yo Ric Dude  <ericmit@ix.netcom.com>

	* proto.c: corrected stream play/record/monitor protocol data lengths

1999-01-28  Felix Bellaby <felix@pooh.u-net.com>

	* session.c: implements session management protocol to avoid race
	conditions under gnome and allow for respawning.
	* Makefile.am, esd-config, config.in: add in SM checks.
	* esd.c (main): add SM argument passing, setup and ICE polling.
	* clients.c (wait_clients_and_data): add ICE to blocking select.
	
1999-01-26  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c: fixed recently broken autosuspend feature

	* esd-server.h, esd.c, players.c: move recorder_write guts to a
	separate function, to be used by monitors, and filters.

Mon Jan 25 03:16:30 PST 1999 Manish Singh <yosh@gimp.org>

	* esddsp.c: added a /dev/mixer wrapper. Set ESDDSP_MIXER=1 to
	for all /dev/mixer access to be trapped. It will save and load
	the mixer settings in ~/.esddsp.{name}.

1999-01-25  Yo Ric Dude  <ericmit@ix.netcom.com>

	* mix.c, proto.c: volume control wired into the mix functions.

1999-01-24  Yo Ric Dude  <ericmit@ix.netcom.com>

	* filter.c, players.c: fix filters to work with the translation
 	function pointers.

	* esdfilt.c: add some processing (double or halve the audio
 	signal) so we can tell if the filter is doing anything useful.

	* clients.c, esd-server.h, esdlib.c, players.c, stamp-h.in:
 	factored into a function the setsockopt calls for setting the
 	socket options for the socket buffer sizes in the court of king
 	caracticus, which was just passing by...

1999-01-24  bertrand <Bertrand.Guiheneuf@inria.fr>

	* configure.in (audiofile check): Fixed a small typo

1999-01-23  Yo Ric Dude  <ericmit@ix.netcom.com>

	* Makefile.am, esound.spec.in: updated web site, and added an rpm
	target to the makefile. "make rpm" and it should go do it's thing.
